# maswavespytest

./: .gitigonre  README.md  pyproject.toml
.github/workflows/: build_and_publish_to_pypi.yaml
examples/: MASWavesPy_Combination_test.py  MASWavesPy_Dispersion_test1.py  MASWavesPy_Dispersion_test2.py  MASWavesPy_Inversion_test.py
src/maswavespy/: combination.py  dispersion.py  inversion.py  select_dc.py
